finished form project

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
     </div>
 
-    <div>
+    <div class="right-side">
         <h2>
             Bienvenidos a la Cazuelita escondida!
         </h2>
@@ -26,7 +26,43 @@
         <p>
             <em>Tu tambien sabes que si la quieres chingar.</em>
         </p>
+        <div class="form-container">
+            <h2>Vamonooos!</h2>
+            <form action="#" method="POST" class="signup-form">
+                <div class="form-group">
+                    <label for="first_name">First Name</label>
+                    <input type="text" id="first_name" name="first_name" placeholder="First Name" required>
+                </div>
+                <div class="form-group">
+                    <label for="last_name">Last Name</label>
+                    <input type="text" id="last_name" name="last_name" placeholder="Last Name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Email" required>
+                </div>
+                <div class="form-group">
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" id="phone" name="phone" placeholder="Phone Number">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" placeholder="Password" required>
+                </div>
+                <div class="form-group">
+                    <label for="confirm_password">Confirm Password</label>
+                    <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm Password" required>
+                </div>
+                <div class="submit">
+                <button type="submit" class="submit-btn">Create Account</button>
+                <p>Already have an account? <a href="#">Log in</a></p>
+                </div>
+            </form>
+                    
+        </div>
     </div>
+
+
 </div>
 </body>
 </html>
